<resources>
    <string name="app_name">Traslado de Carga</string>

    <!--Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Drawer Menus-->
    <string name="menu_drawer_uno">Menu 1</string>
    <string name="menu_drawer_dos">Menu 2</string>
    <string name="menu_drawer_tres">Menu 3</string>
    <string name="menu_drawer_cuatro">Acerca</string>
    <string name="menu_drawer_cinco">Cerrar Sesion</string>

    <!--App Message-->
    <string name="progressdialog_cargando">Espere unos momentos</string>
    <string name="error">Error</string>
    <string name="version">"Version"</string>
    <string name="network_not_connection">No hay conexion a Internet</string>

    <!-- Notifications -->
    <string name="notification_service_title_upload">Sincronizacion de Ordenes</string>
    <string name="notification_service_title_download">Descarga de Ordenes</string>

    <!-- Order -->
    <string name="order_response_list_empty">No se encontraron ordenes asignadas</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>

    <string name="batched_location_updates">Batched location updates</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

    <string name="default_channel">Default channel</string>

    <string name="error_enter_email">Por favor, escribe tu correo electrónico</string>
    <string name="error_invalid_email">Correo electrónico no valido</string>

    <!-- Dialog componente numerico-->
    <string name="digits_zero">0</string>
    <string name="digits_one">1</string>
    <string name="digits_two">2</string>
    <string name="digits_three">3</string>
    <string name="digits_four">4</string>
    <string name="digits_five">5</string>
    <string name="digits_six">6</string>
    <string name="digits_plus">+</string>
    <string name="digits_ok">OK</string>



    <string name="text_welcome_message">Welcome to Android Tutorials Hub</string>
    <string name="text_dialog_bottom_sheet">Dialog Bottom Sheet</string>
    <string name="text_expand_me">Expand Me</string>
    <string name="text_collapse_me">Collapse Me</string>
    <string name="text_expand_bottom_sheet">Expand Bottom Sheet</string>
    <string name="text_collapse_bottom_sheet">Collapse Bottom Sheet</string>
    <string name="text_hide_bottom_sheet">Hide Bottom Sheet</string>
    <string name="text_show_bottom_sheet_dialog">Show Bottom Sheet Dialog</string>
</resources>
