<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:gravity="center|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:id="@+id/textView4"
            style="@style/data_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Cantidad: " />

        <TextView
            android:id="@+id/id_tv_cantelements"
            style="@style/cardview_tittle_and_data_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="5dp"
            android:paddingStart="20dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="40dp">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3">

            <Button
                android:id="@+id/id_ib_one"
                style="@style/Button_Round"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_row="0"
                android:text="@string/digits_one" />

            <Button
                android:id="@+id/id_ib_two"
                style="@style/Button_Round"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_row="0"
                android:text="@string/digits_two" />

            <Button
                android:id="@+id/id_ib_three"
                style="@style/Button_Round"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_row="1"
                android:text="@string/digits_three" />

            <Button
                android:id="@+id/id_ib_four"
                style="@style/Button_Round"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_row="1"
                android:text="@string/digits_four" />

            <Button
                android:id="@+id/id_ib_plus"
                style="@style/Button_Round"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:layout_row="2"
                android:text="@string/digits_plus" />

            <Button
                android:id="@+id/id_ib_ok"
                style="@style/Button_Round"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_row="2"
                android:text="@string/digits_ok" />

        </GridLayout>
    </LinearLayout>

</RelativeLayout>
