<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tivit.talmatc.feature.traslado_carga.flight_list.FlightListActivity"
    >
    <!-- Bottom Sheet -->
    <include layout="@layout/bottom_sheet_main" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@+id/toolbar"
        android:paddingBottom="30dp">

        <LinearLayout
            style="@style/general_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/expand_bottom_sheet_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_expand_bottom_sheet" />
            <Button
                android:id="@+id/collapse_bottom_sheet_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expand_bottom_sheet_button"
                android:text="@string/text_collapse_bottom_sheet" />
            <Button
                android:id="@+id/hide_bottom_sheet_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/collapse_bottom_sheet_button"
                android:text="@string/text_hide_bottom_sheet" />
            <Button
                android:id="@+id/show_bottom_sheet_dialog_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hide_bottom_sheet_button"
                android:text="@string/text_show_bottom_sheet_dialog" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    style="@style/Widget.Group.Top">

                    <TextView
                        style="@style/data_title"
                        android:text="AGREGAR VUELO" />

                </RelativeLayout>

                <View style="@style/separator" />

                <LinearLayout
                    style="@style/Widget.Group"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/data_label"
                            android:text="Vuelo" />

                        <AutoCompleteTextView
                            android:id="@+id/id_cam_actv_vuelo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:completionThreshold="1"
                            android:hint="Búsqueda de Vuelo"
                            android:maxLines="1"
                            android:paddingBottom="8dp"
                            android:paddingLeft="10dp"

                            android:paddingTop="8dp"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <View style="@style/separator_vertical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/id_cam_btn_agregarvuelo"
                            style="@style/Button.Primary"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:text="Agregar" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    style="@style/Widget.Group.Top">

                    <TextView
                        style="@style/data_title"
                        android:text="LISTADO DE VUELOS" />

                </RelativeLayout>

                <View style="@style/separator" />

                <LinearLayout
                    style="@style/Widget.Group"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/id_cam_tv_msj"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="No se encontraron elementos"
                        android:visibility="visible" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/id_cam_rv_list_flight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>